sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: not found: value &&
       while (!plusPetitQue(j,v))&&(j>0)
                                 ^